--- a/TodoAPI/templates/index.html
+++ b/TodoAPI/templates/index.html
@@ -3,8 +3,9 @@
 
 <head>
   <meta charset="UTF-8">
+  {% load static %}
   <title>TodoList</title>
-  <link rel="stylesheet" href="assets/css/todos.css">
+  <link rel="stylesheet" href="{% static 'css/todos.css' %}">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- <script src="assets/js/lib/jquery-3.2.1.min.js"></script> -->
 </head>
@@ -37,8 +38,10 @@
     <!-- <input type="button" value="Remove All Done" id="del-done"> -->
 
   </div>
-  <script src="assets/js/lib/jquery-3.2.1.min.js"></script>
-  <script src="assets/js/todos.js"></script>
+  <!-- "assets/js/lib/jquery-3.2.1.min.js" -->
+  <script src="{% static '/js/lib/jquery-3.2.1.min.js'%}"></script>
+  <script src="{% static '/js/todos.js'%}"></script>
+  <!-- <script src="assets/js/todos.js"></script> -->
 </body>
 
 </html>
